@@ -1,1 +1,2 @@
-P: control-has-empty-field source: debian-control-has-empty-field Suggests (line 13)
+P: control-has-empty-field source: debian-control-has-empty-field field "suggests" in package control-has-empty-field
+P: control-has-empty-field source: debian-control-has-empty-field field "vcs-browser" in source paragraph
